# apitally-py-serverless

./: .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
apitally_serverless/: fastapi.py  starlette.py
apitally_serverless/common/: config.py  consumers.py  exceptions.py  headers.py  masking.py  output.py
tests/: test_common_exceptions.py  test_common_masking.py  test_fastapi.py
