[project]
name = "apitally-serverless"
description = "Simple API monitoring & analytics for REST APIs running on serverless platforms (e.g. Cloudflare Workers)."
authors = [{ name = "Apitally", email = "hello@apitally.io" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.10,<4.0"
dependencies = ["typing-extensions>=4.0.0; python_version<'3.11'"]
dynamic = ["version"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.116.1", "starlette>=0.47.2,<1.0.0"]
starlette = ["starlette>=0.47.2,<1.0.0"]

[project.urls]
Homepage = "https://apitally.io"
Documentation = "https://docs.apitally.io"
Repository = "https://github.com/apitally/apitally-py-serverless"

[dependency-groups]
dev = ["mypy~=1.19.0", "pre-commit>=4.5.0", "ruff~=0.14.0"]
test = [
    "httpx~=0.28.0",
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "pytest-mock~=3.15.0",
]
types = ["types-pexpect", "types-pygments", "types-pyyaml"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["apitally_serverless"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
